--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,34 @@
-image_type: rgb
-task_type: 1
+image_type: rgb # 可选:rgb/hyper(每个task会注明用哪个)
+task_type: 1  # 可选:
 
-task_0:
-  image_path: ""
-  save_path: ""
+task_0: # rgb
+  # 功能: 对图像进行截断拉伸归一化. 一般只有SAR图像, 如高分三地理信息编码之后想转成"普通图像"用的, 不要乱用啊
+  # image_path: 待处理图像路径
+  # save_path: 保存路径
+  # rate: 倍率, 一般0.25-0.3, 当然你可以随便几倍试试
+  image_path: D:\code\image_utils\example\SAR
+  save_path: D:\code\image_utils\example\tmp
   rate: 0.3
 
-task_1:
-  image_path: ""
-  save_path: ""
-  size: 255
-  stride: 12
-  pad_zero: null
+task_1: # rgb
+  # 功能: 切图
+  # image_path: 待处理图像路径
+  # save_path: 保存路径
+  # size: 切成的小图大小
+  # stride: 切图步长, 决定了要不要重叠
+  # pad_zero: 不够整除的部分要丢弃还是补0, 可选true/false
+  image_path: D:\code\image_utils\example\SAR
+  save_path: D:\code\image_utils\example\tmp
+  size: 200
+  stride: 200
+  pad_zero: true
 
-task_2:
-  image_path: ""
-  save_path: ""
+task_2: # rgb
+  # 功能: 与本代码task_1相对应, 别的图没办法拼, 因为是用名字来找位置的
+  # image_path: 待处理图像路径
+  # save_path: 保存路径
+  image_path: D:\code\image_utils\example\tmp
+  save_path: D:\code\image_utils\example\tmp2
 
 task_3:
   image_path: ""
