--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,11 @@
-image_type: rgb # 可选:rgb/hyper(每个task会注明用哪个)
-task_type: 6  # 可选:
+# =================== 参数说明 =================== #
+# 1. image_type与task_type必须填写
+# 2. 正确填写相应task_type下的参数
+
+
+# =================== 参数 =================== #
+image_type: hyper # 可选:rgb/hyper(每个task会注明用哪个)
+task_type: 7  # 可选: 0-10
 
 task_0: # rgb
   # 功能: 对图像进行截断拉伸归一化. 一般只有SAR图像, 如高分三地理信息编码之后想转成"普通图像"用的, 不要乱用啊
@@ -24,7 +30,7 @@ task_1: # rgb
   pad_zero: true
 
 task_2: # rgb
-  # 功能: 与本代码task_1相对应, 别的图没办法拼, 因为是用名字来找位置的
+  # 功能: 拼图, 与本代码task_1相对应, 别的图没办法拼, 因为是用名字来找位置的
   # image_path: 待处理图像路径
   # save_path: 保存路径
   image_path: D:\code\image_utils\example\tmp2
@@ -100,3 +106,37 @@ task_6: # rgb
   label_path: D:\code\image_utils\example\label
   save_path: D:\code\image_utils\example\tmp
   rate: 0.3
+
+task_7: # hyper
+  # 功能: 读取高光谱并获得经纬度等信息
+  # image_path: 高光谱路径
+  image_path: D:\code\image_utils\example\hyper
+
+task_8: # hyper
+  # 功能: 将图像截断拉伸, 一般高光谱不这么做, 顺手写的
+  # image_path: 待处理图像路径
+  # save_path: 保存路径
+  # rate: 倍率, 一般0.25-0.3, 当然你可以随便几倍试试
+  image_path: D:\code\image_utils\example\hyper
+  save_path: D:\code\image_utils\example\tmp
+  rate: 0.3
+
+task_9: # hyper
+  # 功能: 高光谱切图
+  # image_path: 待处理图像路径
+  # save_path: 保存路径
+  # size: 切成的小图大小
+  # stride: 切图步长, 决定了要不要重叠
+  # pad_zero: 不够整除的部分要丢弃还是补0, 可选true/false
+  image_path: D:\code\image_utils\example\hyper
+  save_path: D:\code\image_utils\example\tmp
+  size: 200
+  stride: 200
+  pad_zero: true
+
+task_10: # hyper
+  # 功能: 高光谱拼图, 与本代码task_9相对应, 别的图没办法拼, 因为是用名字来找位置的
+  # image_path: 待处理图像路径
+  # save_path: 保存路径
+  image_path: D:\code\image_utils\example\tmp
+  save_path: D:\code\image_utils\example\tmp2
